# qtgrpctest

./: CMakeLists.txt  README.md  makeappimages.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
client/: CMakeLists.txt  Main.qml  discoveryclient.h  grpcclient.cpp  grpcclient.h  main.cpp
proto/: api.proto
server/: CMakeLists.txt  discoveryserver.h  grpcserver.h  main.cpp
